--- a/Code/Test/CVO-Mobile/CVO-Mobile/MasterPageTestPage.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/MasterPageTestPage.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Shared/_Layout.cshtml";
-    Page.Title = "Frieda";
+    Page.Title = "Testpage";
 }
 Հայերեն Shqip ‫العربية‫العربية   Български Català Hrvatski Česky Dansk Nederlands English
 Eesti Suomi Français ქართული Deutsch Ελληνικά ‫עברית‫עברית   Magyar Indonesia Italiano
