--- a/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Nav.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Nav.cshtml
@@ -15,29 +15,52 @@
             <img src="~/Images/home.png" />
             <img src="~/Images/nav_left.png" />
             <img src="~/Images/nav_right.png" />
-            <div class="links">
-                <a href="">
-                    <img src="~/Images/kalender.png" />
+        </div>
+        <div class="Lists">
+            <ul>
+                <li>
                     <h2>
-                        Kalender
+                        <a href="">
+                            <img src="~/Images/kalender.png" />
+
+                            Kalender
+                        </a>
                     </h2>
-                </a>
-
-
-                <a href="">
-                    <img src="~/Images/traject.png" />
+                    <ul class="dropdown">
+                        <li><a href="">Lesmomenten</a></li>
+                        <li><a href="">Deadlines</a></li>
+                        <li><a href="">Examens</a></li>
+                        <li><a href="">Vakantie</a></li>
+                        <li><a href="">Evenementen</a></li>
+                    </ul>
+                </li>
+                <li>
                     <h2>
-                        Traject
-                    </h2>
-                </a>
-
-
-                <a href="">
-                    <img src="~/Images/contact.png" />
-                    <h2>Contact</h2>
-                </a>
-
-            </div>
+                        <a href="">
+                            <img src="~/Images/traject.png" />
+                            Traject
+                        </a>
+</h2>
+                    <ul>
+                        <li><a href="">Lessenrooster</a></li>
+                        <li><a href="">Module</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <h2>
+                        <a href="">
+                            <img src="~/Images/contact.png" />
+                            Contact
+                        </a>
+</h2>
+                    <ul>
+                        <li><a href="" >Openingsuren</a></li>
+                        <li><a href="" >Trajectbegleiding</a></li>
+                        <li><a href="" >Docent</a></li>
+                        <li><a href="">Cursist</a></li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </nav>
 </body>
