--- a/Code/Test/CVO-Mobile/CVO-Mobile/LesRooster.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/LesRooster.cshtml
@@ -49,7 +49,7 @@
             </form>
         </aside>
         <!-- View controller -->
-        <form id="viewlessenroosteer" action="" method="post">
+        <form id="viewLessenrooster" action="" method="post">
             @{
                 if(lessenrooster.Count <= 0)
                 {
